--- a/frontend/src/templates/login.html
+++ b/frontend/src/templates/login.html
@@ -1,5 +1,56 @@
-login
-<a href="/">главная</a>
-<a href="/login">login</a>
-<a href="/404">404</a>
-<a href="/sign-up">sign-up</a>
+
+
+<div class="login-box">
+  <div class="login-logo">
+    <a href="javascript:void(0)">Freelance Studio</a>
+  </div>
+  <div class="card">
+    <div class="card-body login-card-body">
+      <p class="login-box-msg">Войдите, что бы воспользоваться платформой</p>
+
+      <form>
+        <div class="input-group mb-3">
+          <input type="email" class="form-control" placeholder="Email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Пароль">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-12">
+            <div class="icheck-primary">
+              <input type="checkbox" id="remember">
+              <label for="remember">
+                Запомнить меня
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+              <button type="button" class="btn btn-primary btn-block">Войти</button>
+          </div>
+        </div>
+      </form>
+
+    </div>
+  </div>
+
+  <div class="social-auth-links text-center mb-3">
+    <p>- Или -</p>
+    <a href="/sign-up" class="btn btn-block btn-warning">
+      Зарегестрироваться
+    </a>
+  </div>
+
+
+</div>
