--- a/frontend/src/templates/login.html
+++ b/frontend/src/templates/login.html
@@ -7,7 +7,7 @@
   <div class="card">
     <div class="card-body login-card-body">
       <p class="login-box-msg">Войдите, что бы воспользоваться платформой</p>
-
+      <div id="common-error" class="error invalid-feedback text-center mb-3">Неправильный email или пароль</div>
       <form>
         <div class="input-group mb-3">
           <input type="email" class="form-control" placeholder="Email" id="email">
