--- a/frontend/src/templates/pages/dashboard.html
+++ b/frontend/src/templates/pages/dashboard.html
@@ -1,6 +1,6 @@
 dashboard
 
-<a href="/">главная</a>
+<a href="/frontend/src/static">главная</a>
 <a href="/login">login</a>
 <a href="/404">404</a>
 <a href="/sign-up">sign-up</a>
