--- a/frontend/src/templates/layout.html
+++ b/frontend/src/templates/layout.html
@@ -57,7 +57,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/freelances" class="nav-link ">
+            <a href="/freelancers" class="nav-link ">
               <i class="nav-icon fas fa-users"></i>
               <p>
                 Фрилансеры
