--- a/frontend/src/templates/pages/orders/create.html
+++ b/frontend/src/templates/pages/orders/create.html
@@ -30,7 +30,7 @@
                   <label for="amountInput" class="col-form-label">Сумма</label>
                 </div>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="amountInput" placeholder="Сумма">
+                  <input type="number" class="form-control" id="amountInput" placeholder="Сумма">
                   <span id="amountInput-error" class="error invalid-feedback">Заполните поле</span>
                 </div>
               </div>
@@ -74,7 +74,7 @@
 
               <div class="row">
                 <div class="col-sm-4">
-                  <div class="card bg-gradient-info">
+                  <div class="card bg-gradient-info" id="scheduled-card">
                     <div class="card-header border-0">
 
                       <h3 class="card-title">
@@ -86,14 +86,43 @@
                       <div id="calendar-scheduled" style="width: 100%"></div>
                     </div>
                   </div>
+                  <span id="scheduled-card-error" class="error text-center invalid-feedback">Выберите дату</span>
                 </div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                  <div class="card bg-gradient-success" id="complete-card" >
+                    <div class="card-header border-0">
+
+                      <h3 class="card-title">
+                        <i class="far fa-calendar-alt"></i>
+                        Дата исполнения (необязательно)
+                      </h3>
+                    </div>
+                    <div class="card-body pt-0">
+                      <div id="calendar-complete" style="width: 100%"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="card bg-gradient-warning" id="deadline-card" >
+                    <div class="card-header border-0">
+
+                      <h3 class="card-title">
+                        <i class="far fa-calendar-alt"></i>
+                        Дата дедлайна
+                      </h3>
+                    </div>
+                    <div class="card-body pt-0">
+                      <div id="calendar-deadline" style="width: 100%"></div>
+                    </div>
+                  </div>
+                  <span id="deadline-card-error" class="error text-center invalid-feedback">Выберите дату</span>
+
+                </div>
               </div>
 
 
               <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
+                <div class="w-100 text-center">
                   <button type="button" class="btn btn-danger" id="saveButton">Сохранить</button>
                 </div>
               </div>
