--- a/frontend/src/templates/pages/freelancers/edit.html
+++ b/frontend/src/templates/pages/freelancers/edit.html
@@ -141,7 +141,7 @@
 
               <div class="form-group row">
                 <div class="offset-sm-3 col-sm-9">
-                  <button type="button" class="btn btn-danger" id="saveButton">Сохранить</button>
+                  <button type="button" class="btn btn-danger" id="updateButton">Сохранить</button>
                 </div>
               </div>
 
