--- a/frontend/src/templates/pages/dashboard.html
+++ b/frontend/src/templates/pages/dashboard.html
@@ -4,7 +4,7 @@
   </div>
 
   <section class="content">
-    <div class="row">
+    <div class="container-fluid"><div class="row">
       <div class="col-lg-3 col-6">
 
         <div class="small-box bg-info">
@@ -48,14 +48,15 @@
     </div>
 
 
-    <h3 class="mb-1">Календарь заказов</h3>
+      <h3 class="mb-1">Календарь заказов</h3>
 
-    <div class="card card-primary">
-      <div class="card-body p-0">
-        <div id="calendar"></div>
+      <div class="card card-primary">
+        <div class="card-body p-0">
+          <div id="calendar"></div>
+        </div>
       </div>
+
+
     </div>
-
-
   </section>
 </div>
